fix: jabel configuration for Java 8 support
- Avoid using Java 9+ APIs
- Use Java 8 compatible dependencies
- Fix the Jabel configuration